--- a/Vidly/Vidly.csproj
+++ b/Vidly/Vidly.csproj
@@ -251,11 +251,20 @@
     <Compile Include="Migrations\201712050713157_MakeReleaseDateNullable.Designer.cs">
       <DependentUpon>201712050713157_MakeReleaseDateNullable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201712160021067_ModifiedReleaseDate.cs" />
+    <Compile Include="Migrations\201712160021067_ModifiedReleaseDate.Designer.cs">
+      <DependentUpon>201712160021067_ModifiedReleaseDate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201712160205535_UpdatedDateAddedColumn.cs" />
+    <Compile Include="Migrations\201712160205535_UpdatedDateAddedColumn.Designer.cs">
+      <DependentUpon>201712160205535_UpdatedDateAddedColumn.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
+    <Compile Include="Models\MinAgeCV.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -371,6 +380,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201712050713157_MakeReleaseDateNullable.resx">
       <DependentUpon>201712050713157_MakeReleaseDateNullable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712160021067_ModifiedReleaseDate.resx">
+      <DependentUpon>201712160021067_ModifiedReleaseDate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201712160205535_UpdatedDateAddedColumn.resx">
+      <DependentUpon>201712160205535_UpdatedDateAddedColumn.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
